Apply code analysis suggestions to BiscuitTest
- Remove unnecessary 'throws' declarations
- Use List.of(if-one-arg)
- Remove unused variable 'deser'
- Replace anonymous new KeyDelegate() with lambda
- Remove unused imports
- Replace lambda's with method references
- Use static import for System.out.println
- Print expected stack traces to System.out